Simplify pom.xml files